glx/tests/valid/repository-minimal.glx
repositories:
  repository-12345678:
    version: "1.0"
    name: "Test Repository"
