glx/tests/invalid/place-missing-name.glx
# Invalid: Missing required 'name' field
places:
  place-12345678:
    version: "1.0"
    type: city
